# hackcode-engine

./: .hackcode-todos.json  CONTRIBUTING.md  Modelfile  README.md  ROADMAP.md  install.sh
.github/workflows/: upstream-sync.yml
.hackcode/sessions/bc692bcac69824a6/: session-1776068029370-0.jsonl
cheatsheets/default-creds/: SKILL.md
cheatsheets/linux-privesc/: SKILL.md
cheatsheets/reverse-shells/: SKILL.md
cheatsheets/sqli-payloads/: SKILL.md
cheatsheets/xss-payloads/: SKILL.md
mcp-servers/: __init__.py  base.py  exploit.py  passwords.py  pyproject.toml  recon.py  utils.py  web.py
rust/.hackcode/sessions/e90808530b36ab3d/: session-1775737207380-0.jsonl  session-1775737663410-0.jsonl  session-1775738904028-0.jsonl  session-1775739267268-0.jsonl  session-1775740141320-0.jsonl
rust/crates/api/src/: client.rs
rust/crates/api/src/providers/: mod.rs  openai_compat.rs
rust/crates/api/tests/: client_integration.rs
rust/crates/commands/src/: lib.rs
rust/crates/compat-harness/src/: lib.rs
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/src/: bash.rs  config.rs  config_validate.rs  conversation.rs  file_ops.rs  lib.rs  mcp_server.rs  oauth.rs  prompt.rs  session.rs  session_control.rs  stale_base.rs  worker_boot.rs
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: init.rs  main.rs  render.rs  report.rs  scanner.rs  setup.rs
rust/crates/tools/src/: lib.rs  pdf_extract.rs
